--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -217,7 +217,7 @@ header {
 	-moz-border-radius-bottomright: 4px;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
-	padding: 34px 25px 22px 50px;
+	padding: 34px 25px 22px 30px;
 	margin: 30px 25px 0 0;
 	-webkit-font-smoothing: antialiased;
 }
@@ -323,6 +323,13 @@ a.install {
     background: url("../images/loading_.gif") no-repeat scroll 100% 0 transparent;
     display: inline-block;
     padding-right: 31px;
+}
+
+.with-firetabs-icon48 {
+  background-image: url("../images/firetabs/firetabs-64.png");
+  background-repeat: no-repeat;
+  background-size: 48px auto;
+  background-position: 100% -4px;
 }
 
 img.loading {
